--- a/index.html
+++ b/index.html
@@ -318,69 +318,69 @@
         ];
         const DRIVE_OPTIONS = {
             level1: [
-                "Passive Tasks?",
-                "A sexy video?",
-                "A hot picture?"
+                "Passive Tasks?🟢🟠",
+                "A sexy video?🟠🔴",
+                "A hot picture?🔴"
             ],
             level2: {
-                "Passive Tasks?": [
-                    "Clothing-related",
-                    "Mind-related",
-                    "Other Passive Tasks"
+                "Passive Tasks?🟢🟠": [
+                    "Clothing-related🟠",
+                    "Mind-related🟢",
+                    "Other Passive Tasks🟠"
                 ],
-                "A sexy video?": [
-                    "Starting Clothed",
-                    "Starting Nude",
-                    "Special Submission"
+                "A sexy video🟠🔴?": [
+                    "Starting Clothed🟠",
+                    "Starting Nude🔴",
+                    "Special Submission🔴"
                 ],
-                "A hot picture?": [
-                    "Object-interaction",
-                    "Accessories",
-                    "Special Submissive"
+                "A hot picture?🔴": [
+                    "Object-interaction🔴",
+                    "Accessories🔴",
+                    "Special Submissive🔴"
                 ]
             },
             level3: {
-                "Clothing-related": [
+                "Clothing-related🟠": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free",
                     "I will inform you at least two days this week that I am wearing my black vest with no bra underneath, and you can decide what you want to do with me then."
                 ],
-                "Mind-related": [
+                "Mind-related🟢": [
                     "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
                     "I know I look hot with my hair down. I will send you at least three separate videos throughout the week showing you that I am studying with my hair down.",
                     "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too."
                 ],
-                "Other Passive Tasks": [
+                "Other Passive Tasks🟠": [
                     "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week, right here on this webpage.",
                     "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
                     "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week."
                 ],
-                "Starting Clothed": [
+                "Starting Clothed🟠": [
                     "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
                     "I will start out standing, wearing only a vest and panties, and then lower my vest to my stomach to present my breasts to you, all the while smiling at you.",
                     "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down."
                 ],
-                "Starting Nude": [
+                "Starting Nude🔴": [
                     "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
                     "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
                     "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
                 ],
-                "Special Submission": [
+                "Special Submission🔴": [
                     "I will get topless for you, and send you a top-half-only video of me putting on eyeliner, because I know it makes me look prettier still, and you love it so.",
                     "I'll start out in my black bra and dark panties, my hair tied up. I will begin by turning around, letting my hair and panties down, and taking my bra off. I'll turn back around after five seconds, and push my hair to my front, hands clasped in front in submission.",
                     "I'll get fully naked for you, and then start the video with my hands behind me and hair down, spectacles on. I'll then affirm my submission to you by saying as much, and assure you of my obedience to do anything you say."
                 ],
-                "Object-interaction": [
+                "Object-interaction🔴": [
                     "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
                     "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
                     "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in front of you. I'll stand back up and then give you a little twirl so you can appreciate every inch of me."
                 ],
-                "Accessories": [
+                "Accessories🔴": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
                     "Please let me put on any neck-jewelry and send you a nice mirror selfie of me completely nude, hair down, sitting on my knees.",
                     "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
                 ],
-                "Special Submissive": [
+                "Special Submissive🔴": [
                     "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
                     "I'll place a palm under each boob of mine, pushing them up and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
                     "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you."
