--- a/index.html
+++ b/index.html
@@ -390,69 +390,69 @@
         // Growth tab uses the same structure as Drive for a flat, clickable UI
         const GROWTH_OPTIONS = JSON.parse(JSON.stringify(DRIVE_OPTIONS));
         GROWTH_OPTIONS.level1 = [
-            "Self-Care",
-            "Career-related",
-            "Submission"
+            "Self-Care🟢",
+            "Career-related🟢🟠",
+            "Submission🔴"
         ];
         GROWTH_OPTIONS.level2 = {
-            "Self-Care": [
-                "Physical Health",
-                "Emotional Health",
-                "Mental Health"
+            "Self-Care🟢": [
+                "Physical Health🟢",
+                "Emotional Health🟢",
+                "Mental Health🟢"
             ],
-            "Career-related": [
-                "Studies",
-                "Skills",
-                "Capabilities"
+            "Career-related🟢🟠": [
+                "Studies🟢",
+                "Skills🟢🟠",
+                "Capabilities🟢🟠"
             ],
-            "Submission": [
-                "Physical Display",
-                "Verbal Gratitude",
-                "Mental Conditioning"
+            "Submission🟠🔴": [
+                "Physical Display🔴",
+                "Verbal Gratitude🟠🔴",
+                "Mental Conditioning🟠"
             ]
         };
         GROWTH_OPTIONS.level3 = {
-            "Physical Health": [
+            "Physical Health🟢": [
                 "I am going to send you four videos of me drinking a full glass of water today.",
                 "Let's work on my body from today. I am going to ask you about how to to ease into general exercise.",
                 "I think I will work on toning my abdominal region. I'll put you on a vc and do 2x10 ab crunches today!"
             ],
-            "Emotional Health": [
+            "Emotional Health🟢": [
                 "Write down three things you're grateful for. The list must not include your family or me.",
                 "Call up Keshvi, and reconnect.",
                 "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together."
             ],
-            "Mental Health": [
+            "Mental Health🟢": [
                 "Write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' Send me a photo of the paper.",
                 "Call me up and compliment yourself on something that you did in the recent past that you're really proud of for having done.",
                 "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
             ],
-            "Studies": [
+            "Studies🟢": [
                 "Cover everything on Open Economy ISLM and International Economics topic-wise from the portal. This is a recurring task till I conclude that you need not study it any more.",
                 "Solve the PYQs for IIT and CUET, all that is left for you. This is a recurring task till I conclude that you need not study it any more.",
                 "Focus on regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
             ],
-            "Skills": [
+            "Skills🟢🟠": [
                 "Pester me to get you a course on Unacademy.",
                 "Schedule an interview with me, either one where you remain clothed throughout, or one where you start out clothed and keep losing garments for every mistake you make.",
                 "Enroll yourself in a MicroMasters course or its equivalent, after suitably consulting me."
             ],
-            "Capabilities": [
-                "Do a hundred jumping jacks for better breathing and lung capacity, while keeping me on video call.",
-                "Write a 500-word essay on how you picture a day in your life at colleeg during Masters, by hand in a copy, and make me a PDF of it.",
-                "Perform 10 time-controlled squats with me on video call. I shall do the controlling of the time."
+            "Capabilities🟢🟠": [
+                "Do a hundred jumping jacks for better breathing and lung capacity, while keeping me on video call. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked.",
+                "Write a 500-word essay on how you picture a day in your life at college during Masters, by hand in a copy, and make me a PDF of it.",
+                "Perform 10 time-controlled squats with me on video call. I shall do the controlling of the time. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked"
             ],
-            "Physical Display": [
+            "Physical Display🔴": [
                 "Present yourself to me in the most natural of your poses: fully nude, kneeling with your hair down, spectacles off, eyes lowered and hands clasped behind you. You may choose to do as much in a photo, video, or on a video call.",
                 "Present yourself to me with your bra in your mouth, wearing nothing at all, feet close together and hands behind you, hair down.",
                 "Present your ass to me by perfecting the arch over a video call."
             ],
-            "Verbal Gratitude": [
+            "Verbal Gratitude🟠🔴": [
                 "Send me a voice message clearly expressing your gratitude at being my submissive. You may choose how long or short it is.",
                 "Text me once today saying, 'Sir, I just wanted to remind you that I am all yours,' but not in these exact same words.",
-                "Kneel nude, clasp your breasts with your hands, and slowly place your knees wide apart in a video, opening yourself up to me."
+                "Kneel nude, clasp your breasts with your hands, and slowly place your knees wide apart in a video, opening yourself up to me. Caption the video as 'A thank-you video for you'."
             ],
-            "Mental Conditioning": [
+            "Mental Conditioning🟠": [
                 "Get topless, write 'I am Arka's favourite plaything' on your stomach, and send me a video of you writing it.",
                 "Call me up some time today, and ask me for instructions for a task, and remember to thank me appropriately.",
                 "Type up a 200-word essay on why you think you should obey me every step of your being, every day in your life, and send it to me."
