--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         GROWTH_OPTIONS.level1 = [
             "Self-Care🟢",
             "Career-related🟢🟠",
-            "Submission🔴"
+            "Submission🟠🔴"
         ];
         GROWTH_OPTIONS.level2 = {
             "Self-Care🟢": [
