--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     "Mind-related🟢",
                     "Other Passive Tasks🟠"
                 ],
-                "A sexy video🟠🔴?": [
+                "A sexy video?🟠🔴": [
                     "Starting Clothed🟠",
                     "Starting Nude🔴",
                     "Special Submission🔴"
