--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                 "I think I will work on toning my abdominal region. I'll put you on a vc and do 2x10 ab crunches today!"
             ],
             "Emotional Health🟢": [
-                "Write down three things you're grateful for. The list must not include your family or me.",
-                "Call up Keshvi, and reconnect.",
+                "Write down three things you'd want to do this year with me, virtually or not.",
+                "Call up any friend you wish to, and reconnect.",
                 "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together."
             ],
             "Mental Health🟢": [
