--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                 <span class="tab-text">What's on your mind?😏</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Drive?😈</span>
+                <span class="tab-text">Do you wish to drive?😈</span>
             </div>
             <div class="tab" data-tab="growth">
-                <span class="tab-text">Growth🌱</span>
+                <span class="tab-text">Baby steps toward your growth🌱</span>
             </div>
         </nav>
         <main class="content-area" id="contentArea">
