--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 </head>
 <body>
     <header class="title-ribbon">
-        <h1 class="main-title" id="homeButton">babygirl.</h1>
+        <h1 class="main-title" id="homeButton">my babygirl.</h1>
     </header>
     <div class="main-container">
         <nav class="sidebar">
