--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 ],
                 "Special Submissive🔴": [
                     "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
-                    "I'll place a palm under each boob of mine, pushing them up and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
+                    "I'll place a palm under each boob of mine, pushing them up with index finger and thumb and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
                     "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you."
                 ]
             }
