--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <span class="tab-text">What's on your mind?😏</span>
             </div>
             <div class="tab" data-tab="play">
-            <span class="tab-text">How do you want to play?😏</span>
+            <span class="tab-text">Some games for when you're bored🕹</span>
             </div>
             <div class="tab" data-tab="drive">
                 <span class="tab-text">Do you wish to drive?😈</span>
@@ -395,20 +395,20 @@
             }
         };
         const PLAY_OPTIONS = {
-    "Playful Tease": [
-        "Send a flirty selfie with a wink.",
-        "Record a short audio saying, 'I miss you, sir.'",
-        "Write a naughty note and send a photo of it."
+    "Mind-games🟢🟠": [
+        "Get me to play Anything Can Be Used to Pick You Up. 🟢",
+        "Schedule a game of Chess with me sometime today. 🟢",
+        "Play Seven Questions with me to decide how you wish to offer a look at your body to me today. 🟠"
     ],
-    "Sensual Challenge": [
-        "Touch yourself for 30 seconds while thinking of me.",
-        "Take a slow, sexy video of your lips.",
-        "Send a picture of your bare back, shoulders, or neck."
+    "Remote Games 🟢🟠": [
+        "Ask ChatGPT, 'What can I do to please my lond-distance dominant boyfriend?', take a screenshot of the results to show them to me, and do the top two things suggested. 🟠",
+        "Play Adult Truth or Dare with me on any app you choose. 🟠",
+        "Schedule a 1v1 online game with me today. 🟢"
     ],
-    "Submission Request": [
-        "Ask me directly for a command.",
-        "Text me, 'Sir, tell me what to do.'",
-        "Send a voice note begging for instructions."
+    "Games for a good Submissive 🔴": [
+        "The moment you're free to get naked for me, ask me directly for a command, and immediately do as I say. 🔴",
+        "Tease me while I am at work some day. Resort to texts, photos, videos, voice messages: anything you wish. 🟠",
+        "Play a game of endurance with me on video call, and take up the challenge to do what I say, for as long as I say. 🔴" 
     ]
 };
         // Growth tab uses the same structure as Drive for a flat, clickable UI
