--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 ],
                 "Accessories🔴": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
-                    "Please let me put on any neck-jewelry and send you a nice mirror selfie of me completely nude, hair down, sitting on my knees.",
+                    "I think I'll put on the longest socks I can find, along with any cap I may have, and wear nothing else as I send you a mirror selfie, the phone just covering my face, the other hand behind me. If I cannot find the cap, you may have to make do with just the rest.",
                     "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
                 ],
                 "Special Submissive🔴": [
@@ -447,19 +447,19 @@
         };
         const PLAY_OPTIONS = {
     "Mind-games🟢🟠": [
-        "Get me to play Anything Can Be Used to Pick You Up. 🟢",
-        "Schedule a game of Chess with me sometime today. 🟢",
-        "Play Seven Questions with me to decide how you wish to offer a look at your body to me today. 🟠"
+        "Get me to play Anything Can Be Used to Pick You Up. ",
+        "Schedule a game of Chess with me sometime today. ",
+        "Play Seven Questions with me to decide how you wish to offer a look at your body to me today. "
     ],
     "Remote Games 🟢🟠": [
-        "Ask ChatGPT, 'What can I do to please my lond-distance dominant boyfriend?', take a screenshot of the results to show them to me, and do the top two things suggested. 🟠",
-        "Play Adult Truth or Dare with me on any app you choose. 🟠",
-        "Schedule a 1v1 online game with me today. 🟢"
+        "Ask ChatGPT, 'What can I do to please my long-distance dominant boyfriend?', take a screenshot of the results to show them to me, and do the top two things suggested. ",
+        "Play Adult Truth or Dare with me on any app you choose. ",
+        "Schedule a 1v1 online game with me today. "
     ],
     "Games for a good Submissive 🔴": [
-        "The moment you're free to get naked for me, ask me directly for a command, and immediately do as I say. 🔴",
-        "Tease me while I am at work some day. Resort to texts, photos, videos, voice messages: anything you wish. 🟠",
-        "Play a game of endurance with me on video call, and take up the challenge to do what I say, for as long as I say. 🔴" 
+        "The moment you're free to get naked for me, ask me directly for a command, and immediately do as I say. ",
+        "Tease me while I am at work some day. Resort to texts, photos, videos, voice messages: anything you wish. ",
+        "Play a game of endurance with me on video call, and take up the challenge to do what I say, for as long as I say. " 
     ]
 };
         // Growth tab uses the same structure as Drive for a flat, clickable UI
