--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
                 "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
             ],
             "Studies🟢": [
-                "Cover everything on Open Economy ISLM and International Economics topic-wise from the portal. This is a recurring task till I conclude that you need not study it any more.",
-                "Solve the PYQs for IIT and CUET, all that is left for you. This is a recurring task till I conclude that you need not study it any more.",
+                "Cover everything on Rational Expectations, Real Business Cycles, and Keynesian Economics topic-wise from the portal. This is a recurring task till I conclude that you need not study it any more.",
+                "Solve the PYQs for SAU, HCU, MSE, and ISI PEA, all that is left for you. This is a recurring task till I conclude that you need not study it any more.",
                 "Focus on regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
             ],
             "Skills🟢🟠": [
