--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 "Clothing-related🟠": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free",
-                    "I will inform you at least two days this week that I am wearing my black vest with no bra underneath, and you can decide what you want to do with me then."
+                    "For any two consecutive days of the week, I am going to be sending you videos of me changing any garment: whether it's wearing socks, putting on a towel, taking off a bra, or any other garment added to or subtracted from my body."
                 ],
                 "Mind-related🟢": [
                     "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
