--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     "Special Submission🔴"
                 ],
                 "A hot picture?🔴": [
-                    "Object-interaction🔴",
+                    "Unique🔴",
                     "Accessories🔴",
                     "Special Submissive🔴"
                 ]
@@ -420,7 +420,7 @@
                 ],
                 "Starting Nude🔴": [
                     "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
-                    "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
+                    "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in front of you. I'll stand back up and then give you a little twirl so you can appreciate every inch of me.",
                     "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
                 ],
                 "Special Submission🔴": [
@@ -428,10 +428,10 @@
                     "I'll start out in my black bra and dark panties, my hair tied up. I will begin by turning around, letting my hair and panties down, and taking my bra off. I'll turn back around after five seconds, and push my hair to my front, hands clasped in front in submission.",
                     "I'll get fully naked for you, and then start the video with my hands behind me and hair down, spectacles on. I'll then affirm my submission to you by saying as much, and assure you of my obedience to do anything you say."
                 ],
-                "Object-interaction🔴": [
+                "Unique🔴": [
                     "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
                     "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
-                    "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in front of you. I'll stand back up and then give you a little twirl so you can appreciate every inch of me."
+                    "I'll take a photo of me lying nude on the bed, the camera placed just above my breasts and pointing at my feet. I am going to give you a a clear view of how your baby looks naked, from right between my boobs, all the way down to my pussy and legs."
                 ],
                 "Accessories🔴": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
@@ -534,7 +534,7 @@
             ]
         };
         const WEEKLY_TASKS = [
-            "As underwear, you are allowed to wear only panties on Monday, Wednesday, Thursday, and Saturday. Don't let me down. 😘"
+            "You are to inform me at least two days in the 19-26 June week that you're wearing your black vest with no bra underneath, and I will decide what I can want to do with you then. Don't let me down. 😘"
         ];
         const INTRO_TEXT = {
             title: "Welcome, babygirl.",
