--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             "I'll remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.",
             "I'll remember that I am going to keep trying to be the best version of me, no matter what happens, and he's going to help me every step of the way.",
             "I am going to try to keep up with my weekly passive task.",
-            "I will know that I am to do whatever he says, no boundaries at all, for I trust that he knows what's best for me, and what's best for us."
+            "I will know that I am to do whatever he says, no boundaries at all, for I trust that he knows what's best for me, and what's best for us.",
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
         const MIND_OPTIONS = [
